@@ -22,6 +22,21 @@ $eqLogics = eqLogic::byType('livebox');
     </div>
 
     <div class="col-lg-9 col-md-9 col-sm-8 eqLogicThumbnailDisplay" style="border-left: solid 1px #EEE; padding-left: 25px;">
+	  <legend><i class="fa fa-cog"></i>  {{Gestion}}</legend>
+	   <div class="eqLogicThumbnailContainer">
+		<div class="cursor eqLogicAction" data-action="add" style="background-color : #ffffff; height : 120px;margin-bottom : 10px;padding : 5px;border-radius: 2px;width : 160px;margin-left : 10px;" >
+		 <center>
+		  <i class="fa fa-plus-circle" style="font-size : 6em;color:#94ca02;"></i>
+		</center>
+		<span style="font-size : 1.1em;position:relative; top : 15px;word-break: break-all;white-space: pre-wrap;word-wrap: break-word;color:#94ca02"><center>Ajouter</center></span>
+	  </div>
+	  <div class="cursor eqLogicAction" data-action="gotoPluginConf" style="background-color : #ffffff; height : 120px;margin-bottom : 10px;padding : 5px;border-radius: 2px;width : 160px;margin-left : 10px;">
+		<center>
+		  <i class="fa fa-wrench" style="font-size : 6em;color:#767676;"></i>
+		</center>
+		<span style="font-size : 1.1em;position:relative; top : 15px;word-break: break-all;white-space: pre-wrap;word-wrap: break-word;color:#767676"><center>{{Configuration}}</center></span>
+	  </div>
+	</div>
         <legend>{{Mes Livebox}}
         </legend>
 		<div class="eqLogicThumbnailContainer">
@@ -90,8 +105,8 @@ $eqLogics = eqLogic::byType('livebox');
                 <div class="form-group">
                   <label class="col-sm-2 control-label" ></label>
 					<div class="col-sm-10">
-					<input type="checkbox" class="eqLogicAttr bootstrapSwitch" data-label-text="{{Activer}}" data-l1key="isEnable" checked/>
-					<input type="checkbox" class="eqLogicAttr bootstrapSwitch" data-label-text="{{Visible}}" data-l1key="isVisible" checked/>
+					<input type="checkbox" class="eqLogicAttr" data-label-text="{{Activer}}" data-l1key="isEnable" checked/>
+					<input type="checkbox" class="eqLogicAttr" data-label-text="{{Visible}}" data-l1key="isVisible" checked/>
 					</div>
 					<a class="btn btn-default" id="bt_goCarte" title='{{Accéder à la carte}}'><i class="fa fa-cogs"></i></a>
                 </div>
