@@ -1,4 +1,6 @@
 [horizontal]
+WARNING: Detail complet des mises à jour sur https://github.com/guenneguezt/plugin-livebox/commits/master
+
 1.15:: Ajout du delai de changement d'état de la synchro ADSL en seconde
 1.14:: Mise a jour des indicateurs, même si la valeur ne change pas pour les graphiques.
 1.13:: Ajout de bouton "WPS Push Button"
